# Spout2

./: .gitignore
SpoutSDK/Source/: CMakeLists.txt  SpoutGLDXinterop.cpp  SpoutMemoryShare.cpp  SpoutSDK.cpp  SpoutSenderMemory.cpp
SpoutSDK/Source/include/: SpoutDirectX.h  SpoutSenderMemory.h
